--- a/src/components/Works/styles/__background-image/_occupancy/Works__background-image_occupancy_more.css
+++ b/src/components/Works/styles/__background-image/_occupancy/Works__background-image_occupancy_more.css
@@ -1,7 +1,7 @@
 .Works__background-image_occupancy_more {
   width: 100%;
-  -webkit-column-break-inside: avoid;
+  /* -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
-  break-inside: avoid;
-  page-break-inside: avoid;
+  break-inside: avoid-column;
+  page-break-inside: avoid; */
 }
