--- a/src/components/Works/styles/__background/_occupancy/Works__background_occupancy_more.css
+++ b/src/components/Works/styles/__background/_occupancy/Works__background_occupancy_more.css
@@ -5,4 +5,6 @@
   -webkit-column-gap: 4%;
   -moz-column-gap: 4%;
   column-gap: 4%;
+  /* column-fill: auto; */
+  cursor: pointer;
 }
